--- a/index.html
+++ b/index.html
@@ -12,40 +12,35 @@
 <body>
 
     <h1 id="title">Sample Survey Form</h1>
-    <p id="desription">Thank you for taking the time to help us improve the platform </p>
+    <p id="description"><b>only fro programmers</b> fill out this form carefully</p>
     <!-- form section starts -->
     <section class="form-section">
+
         <form id="survey-form">
             <div class="form-control">
-                <div class="lable">
-                    <label for="name" id="=name">Name</label>
-                </div>
+                <div>
+                    <label id="name-label" for="name">Name:</label>
+                    <input type="text" required id="name" name="user_name" placeholder="Enter name here">   </div>
 
-                <input type="text" id="name" placeholder="Enter Your Name">
+
             </div>
 
             <div class="form-control">
-                <div class="label">
-                    <label for="email" id="=email*">Email</label>
-                </div>
 
-                <input type="email" id="email" placeholder="Enter Your Email">
+                <label id="email-label" for="Email">Email:</label>
+                <input type="email" required id="email" name="user_email" placeholder="Enter email here">
             </div>
+            <div>
+                <label id="number-label" for="phone">Phone Number:</label>
+                <input type="number" id="number" name="user_name" placeholder="Enter 10 digit number" min="1" max="9">  </div>
 
-            <div class="form-control">
-                <div class="label">
-                    <label for="age" id="=email*">Age</label>
-                </div>
-
-                <input type="age" id="email" placeholder="Enter Your Age">
-            </div>
 
             <div class="form-control">
                 <div class="lable">
-                    <label for="role" id="role">Which option bestdecribes you </label>
+                    <label for="role" id="role">Which option best decribes you </label>
                 </div>
 
-                <select name="role" id="role">
+                <select name="role" id="dropdown">
     <option  value="student">Student</option>
     <option value="doctor">doctor</option>
     <option value="intern">intern</option>
@@ -54,59 +49,49 @@
             </div>
 
             <div class="form-control">
-                <div class="label">
-                    <label> would yoy recommend freeCamp to a Friend?</label>
+
+
+
+                <div chk-container>
+                    <label for="Gender">Gender</label>
+                    <p>
+                        <input class="chk1" type="radio" name="gender" value="male" checked> Male<br>
+                        <input class="chk1" type="radio" name="gender" value="female"> Female<br>
+                        <input class="chk1" type="radio" name="gender" value="other"> Other
+                    </p>
                 </div>
+                <label for="date-label">your day of birth</label>
+                <input type="date" name="bday">
 
-                <!-- <label for="recommend"> -->
 
-                <!-- check boxes here -->
-                <div class="chk-container">
-                    <div class="chk1">
-                        <label for="chk">Frontend Project </label>
+                <!--Check boxes  -->
+                <fieldset>
+                    <label for="Gender">Education background </label>
+                    <p>
+                        <input type="checkbox" name="tattoo" value="tattoo">Bachelor of Arts, Humanities and Social Sciences;<br>
+                        <input type="checkbox" name="age" value="Car"> Bachelor of Sciences;<br>
+                        <input type="checkbox" name="car" value="car"> Bachelor of Law.<br>
 
-                        <input type="checkbox" id="checkbox1">
+                    </p>
+                </fieldset>
+
+
+
+
+
+
+
+
+
+                <div class="form-contrn1">
+                    <div class="label">
+                        <label for="comment">Any Comments or suggestion </label>
                     </div>
-                    <div class="chk1">
-                        <label for="chk">Back-end Projects</label>
 
-                        <input type="checkbox" id="checkbox1">
-                    </div>
-                    <div class="chk2">
-                        <label for="chk">Data Visualization </label>
+                    <textarea value="attribute" class="text" name="comment" id="comment" cols="30" rows="10"> Enter Your Comment Here</textarea>
 
-                        <input type="checkbox" id="checkbox1">
-                    </div>
-                    <div class="chk3">
-                        <label for="chk"> Challenges </label>
-
-                        <div class="chk4">
-                            <label for="chk">Open-Source Community </label>
-
-                            <input type="checkbox" id="checkbox1">
-                        </div>
-                        <div class="chk2">
-                            <label for="chk">GitHub Helps </label>
-
-                            <input type="checkbox" id="checkbox1">
-                        </div>
-
-                    </div>
-                    <!-- check boxes ends here -->
-
-
-
-                    <div class="form-contrn1">
-                        <div class="label">
-                            <label for="comment">Any Comments or suggestion </label>
-                        </div>
-
-                        <textarea class="text" name="comment" id="comment" cols="30" rows="10"> Enter Your Comment Here</textarea>
-
-                    </div>
-                    <div class="btn">
-                        <button btn-submit>Submit</button>
-                    </div>
+                    <div id="submitbutton">
+                        <button type="submit" id="submit">Send your application</button>   </div>
 
         </form>
     </section>
